// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile as huge 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <Image
      aspectRatio={1.5}
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "400",
          "lineHeight": 22,
          "marginBottom": 0,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 0,
          "marginTop": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`tile as medium 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <Image
      aspectRatio={1.5}
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 18,
          "fontWeight": "400",
          "lineHeight": 18,
          "marginBottom": 0,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 0,
          "marginTop": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`tile as wide 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <Image
      aspectRatio={1.5}
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 20,
          "fontWeight": "400",
          "lineHeight": 20,
          "marginBottom": 0,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 0,
          "marginTop": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;
